fixes sidebar layout issues with map/faa and mibile syling

--- a/src/campaign/sass/components/_search-results.scss
+++ b/src/campaign/sass/components/_search-results.scss
@@ -46,14 +46,9 @@
 
 .search-results-filter{
   background-color: $grey-4;
-  padding-left:20px;
-  padding-right:20px;
-  padding-bottom:20px;
-  padding-top:45px;
+  padding: 20px;
   @include media-query($from: tablet) {
-    // padding-right:45px;
-    // padding-bottom: 0px;
-    // padding-top:00px;
+   padding-top:45px;
   }
   &--apprentice{
     // color: #fff;
@@ -69,10 +64,12 @@
 
 
   .sidebar & {
-    top: 400px;
-    height: 500px;
-    clip-path: polygon(0 100%, 100% 89.4%, 100% 0, 0 8.6%);
-    -webkit-clip-path: polygon(0 100%, 100% 89.4%, 100% 0, 0 8.6%);
+    @include media-query($from: tablet) {
+      height: 500px;
+      clip-path: polygon(0 100%, 100% 89.4%, 100% 0, 0 8.6%);
+      -webkit-clip-path: polygon(0 100%, 100% 89.4%, 100% 0, 0 8.6%);
+    }
+
   }
 }
 .search-results-filter__form{
